修改工具类，完善功能