@@ -1,7 +1,13 @@
 package com.zq.smart_framework.util;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.util.UUID;
+
+import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.codec.digest.DigestUtils;
+import org.apache.commons.lang3.RandomStringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -15,15 +21,16 @@ public final class CodecUtil {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(CodecUtil.class);
 
+    private static final String UTF_8 = "utf-8";
     /**
      * 将 URL 编码
      */
-    public static String encodeURL(String source) {
+    public static String encodeURL(String str) {
         String target;
         try {
-            target = URLEncoder.encode(source, "UTF-8");
+            target = URLEncoder.encode(str, UTF_8);
         } catch (Exception e) {
-            LOGGER.error("encode url failure", e);
+            LOGGER.error("编码出错！", e);
             throw new RuntimeException(e);
         }
         return target;
@@ -32,21 +39,71 @@ public final class CodecUtil {
     /**
      * 将 URL 解码
      */
-    public static String decodeURL(String source) {
+    public static String decodeURL(String str) {
         String target;
         try {
-            target = URLDecoder.decode(source, "UTF-8");
+            target = URLDecoder.decode(str, UTF_8);
         } catch (Exception e) {
-            LOGGER.error("decode url failure", e);
+            LOGGER.error("解码出错！", e);
             throw new RuntimeException(e);
         }
         return target;
     }
 
-  /*  *//**
-     * MD5 加密
-     *//*
-    public static String md5(String source) {
-        return DigestUtils.md5Hex(source);
-    }*/
+    /**
+     * 将字符串 Base64 编码
+     */
+    public static String encodeBASE64(String str) {
+        String target;
+        try {
+            target = Base64.encodeBase64URLSafeString(str.getBytes(UTF_8));
+        } catch (UnsupportedEncodingException e) {
+            LOGGER.error("编码出错！", e);
+            throw new RuntimeException(e);
+        }
+        return target;
+    }
+
+    /**
+     * 将字符串 Base64 解码
+     */
+    public static String decodeBASE64(String str) {
+        String target;
+        try {
+            target = new String(Base64.decodeBase64(str), UTF_8);
+        } catch (UnsupportedEncodingException e) {
+            LOGGER.error("解码出错！", e);
+            throw new RuntimeException(e);
+        }
+        return target;
+    }
+
+    /**
+     * 将字符串 MD5 加密
+     */
+    public static String encryptMD5(String str) {
+        return DigestUtils.md5Hex(str);
+    }
+
+    /**
+     * 将字符串 SHA 加密
+     */
+    public static String encryptSHA(String str) {
+        return DigestUtils.sha1Hex(str);
+    }
+
+    /**
+     * 创建随机数
+     */
+    public static String createRandom(int count) {
+        return RandomStringUtils.randomNumeric(count);
+    }
+
+    /**
+     * 获取 UUID（32位）
+     */
+    public static String createUUID() {
+        return UUID.randomUUID().toString().replaceAll("-", "");
+    }
+
 }
